# scimschema

./: .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  go.bat  go.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh  tox.ini
.github/workflows/: python-app.yml  python-package.yml  python-publish.yml
scimschema/: __init__.py
scimschema/_model/: attribute.py  model.py
scimschema/core_schemas/: SCIM Core2 error spec.json  SCIM Core2 group spec.json  SCIM Core2 resourcetype spec.json  SCIM Core2 schema spec.json  SCIM Core2 serviceproviderconfig spec.json  SCIM Core2 user spec.json  __init__.py
src/: LICENSE  MANIFEST.in  README.rst  scimschema.py  setup.cfg  setup.py
src/_scimschema/_core_schemas/: __init__.py  group.json
src/_scimschema/_core_schemas/resources/: serviceproviderconfig.json
src/_scimschema/_model/: attribute.py  schema_response.py  scim_exceptions.py
src/_scimschema/core_schemas/: __init__.py  user.json
src/_scimschema/core_schemas/resources/: resourcetype.json
src/scimschema/: VERSION  __init__.py
src/scimschema/_model/: attribute.py  model.py  schema_response.py  scim_exceptions.py
src/scimschema/core_schemas/: __init__.py
tests/: __init__.py  test_attributes.py  test_model.py  test_schema_schema.py  test_scim_response.py  test_scim_schema.py
tests/examples/: __init__.py  customUser.json  group.json  huddleUser.json  user.json
tests/extension/: SCIM Extensions Account spec.json  SCIM_Patch_example.json  __init__.py
tests_scimschema/: test_scim_response.py  test_scim_schema.py
tests_scimschema/examples/: __init__.py  huddleUser.json
tests_scimschema/extension/: SCIM Extensions SimpleAccount spec.json  SCIM_Custom_spec.json
