[tool.poetry]
authors = [ "Gordon So <gordonkwso@gmail.com>"]

name = "scimschema"
description = "A validator for System for Cross domain Identity Management (SCIM) responses given predefine schemas"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
include = [
    "LICENSE",
    "VERSION",
    "README.rst",
    "scimschema/core_schemas/*.json",
    "py.typed",
]
homepage = "https://github.com/GordonSo/scimschema"
repository = "https://github.com/GordonSo/scimschema"
readme = "README.rst"
keywords = ["scimschema", "scim"]
version = "0.2.94"


[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
isort = "*"
pytest-cov = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
