[metadata]
author = "Gordon So"
author_email = gordonkwso@gmail.com

name = scimschema
version = file: VERSION
description = "A validator for System for Cross domain Identity Management (SCIM) responses given predefine schemas"
long_description = file: README.rst, LICENSE
license = OSI Approved :: MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
